# hsr_irp

./: .gitignore  LICENSE  README.md  ROS-install.md  Readme_install.md  TODOLists.md  limit_table
Untitled Folder/: urdf.rar
br606_eyehand_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
br606_eyehand_moveit_config/config/: controllers.yaml  hsr_br606.srdf  joint_limits.yaml
br606_eyehand_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  hsr_br606_eyehand_moveit_planning_execution.launch  hsr_br606_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
br606_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
br606_gripper_moveit_config/config/: controllers.yaml  fake_controllers.yaml  hsr_br606.srdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_kinect.yaml
br606_gripper_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  hsr_br606_moveit_controller_manager.launch.xml  hsr_br606_moveit_planning_execution.launch  hsr_br606_moveit_sensor_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  (+9 more)
br606_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
br609_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
br609_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
co602_agv_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
co602_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
co602_moveit_config/: .setup_assistant  CMakeLists.txt  loop_test.py  package.xml
co602_moveit_with_one/: .setup_assistant  CMakeLists.txt  package.xml
co602_moveit_with_two/: .setup_assistant  CMakeLists.txt  package.xml
co602a_eyeonhand_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
co602a_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
co602a_two__merge/: .setup_assistant  CMakeLists.txt  package.xml
co605_agv_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
co605_dual_arm_gripper_ikfast_arm0_plugin/: CMakeLists.txt  co605_dual_arm_gripper_arm0_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
co605_dual_arm_gripper_ikfast_arm1_plugin/: CMakeLists.txt  co605_dual_arm_gripper_arm1_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
co605_dual_arm_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  readme.md
co605_eyeonhand_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
co605_fight_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
co605_merge_config/: .setup_assistant  CMakeLists.txt  package.xml  readme.md
co605_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hsr_bringup/: CMakeLists.txt  test.lanuch
hsr_co602a_gaihou/: CMakeLists.txt  package.xml
hsr_co602a_gaihou/launch/: display.launch  gazebo.launch
hsr_co602a_gaihou/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL
hsr_co602a_gaihou/urdf/: hsr_co602a_gaihou copy.urdf  hsr_co602a_gaihou.urdf
hsr_demo/: CMakeLists.txt  package.xml
hsr_description/: package.xml
hsr_gazebo/: CMakeLists.txt  package.xml
hsr_gripper_driver/: CMakeLists.txt  package.xml  readme.md
hsr_impedance/: CMakeLists.txt  package.xml
hsr_irp/: CMakeLists.txt  package.xml
hsr_moveit_api/: CMakeLists.txt  package.xml
hsr_moveit_api/launch/: api.launch
hsr_moveit_api/src/: base_api.cpp
hsr_msg/: CMakeLists.txt  package.xml
hsr_msgs/: CMakeLists.txt  package.xml
hsr_pcl/: CMakeLists.txt  package.xml
hsr_pcl/src/: kinect_filter.cpp  pcl_demo.cpp
hsr_pcl/srv/: LoadPCD.srv
hsr_pick/: CMakeLists.txt  package.xml
hsr_rosi_client/: CMakeLists.txt  package.xml
hsr_rosi_client/include/: joint_trajectory_cubic_downloader.h  joint_trajectory_full_downloader.h  joint_trajectory_full_interface.h
hsr_rosi_client/launch/: robot_full_interface_download.launch  robot_inter_interface_download.launch
hsr_rosi_client/src/: generic_cubic_joint_downloader_node.cpp  generic_full_joint_downloader_node.cpp  joint_trajectory_cubic_downloader.cpp  joint_trajectory_full_downloader.cpp  joint_trajectory_full_interface.cpp
hsr_rosi_device/: CMakeLists.txt  install.sh  package.xml  readme.md
hsr_rosi_device/include/: joint_trajectory_cubic_downloader.h  joint_trajectory_full_downloader.h  joint_trajectory_full_interface.h  robot_sys_message.h
hsr_rosi_device/launch/: co605_industrial_real_merge.lanuch  co605_industrial_real_merge.launch  co605_state-bak.lanuch  co605_state.lanuch  co605_state_real_merge.lanuch  robot_full_interface_download.launch  robot_full_interface_download_two.launch  robot_inter_interface_download.launch  ros_controllers.yaml  ur5_state.lanuch
hsr_rosi_device/scripts/: two_robot_action.py  two_robot_action_with_grasp.py
hsr_rosi_device/src/: generic_cubic_joint_downloader_node.cpp  generic_full_joint_downloader_node.cpp  generic_joint_downloader_imp_node.cpp  joint_trajectory_cubic_downloader.cpp  joint_trajectory_full_downloader.cpp  joint_trajectory_full_interface.cpp  robot_sys_message.cpp
hsr_rosi_device/srv/: StopMoveSrv.srv  getModeSrv.srv  setModeSrv.srv
hsr_rviz_plugin/rviz_pickplace_commander/: CMakeLists.txt  package.xml  plugin_description.xml
hsr_rviz_plugin/rviz_pickplace_commander/src/: GripperWdg.cpp  GripperWdg.h  MyComboBox.cpp  MyComboBox.h  OrkWdg.cpp  OrkWdg.h  PickPlaceWdg.cpp  PickPlaceWdg.h  SerialWdg.cpp  SerialWdg.h  pickplace_pad.cpp  pickplace_pad.h
jr603_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
jr603_moveit_config/: .setup_assistant  package.xml
jr605_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+752 files in other folders)
