<?xml version="1.0"?>
<package format="2">
  <name>hsr_irp</name>
  <version>0.0.0</version>
  <description>The hsr_irp package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="1125290220@qq.com">xkl</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>hsr_msgs</exec_depend>
  <exec_depend>hsr_pick</exec_depend>
  <exec_depend>gripper_control</exec_depend>
  <exec_depend>hsr_rosi_client</exec_depend>
  <exec_depend>hsr_pcl</exec_depend>
  <exec_depend>hsr_moveit_api</exec_depend>
  <exec_depend>hsr_impedance</exec_depend>
  <exec_depend>hsr_gazebo</exec_depend>
  <exec_depend>hsr_description</exec_depend>
  <exec_depend>hsr_demo</exec_depend>
  <exec_depend>hsr_bringup</exec_depend>
  <exec_depend>co602_moveit_config</exec_depend>
  <exec_depend>co602_gripper_moveit_config</exec_depend>
  <exec_depend>br609_moveit_config</exec_depend>
  <exec_depend>br606_moveit_config</exec_depend>
  <exec_depend>br606_gripper_moveit_config</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
     <metapackage/>
  </export>
</package>
